--- a/index.html
+++ b/index.html
@@ -270,21 +270,21 @@
                         -->
                     </div>
                     <div class="col-sm-2 mb-45">
-                        <div class="page-icon-top"><i class="ion ion-ios-color-filter-outline"></i></div>
-                        <h5>Design <br /> & <br /> Innovation</h5>
+                        <div class="page-icon-top"><i class="ion ion-ios-lightbulb-outline"></i></div>
+                        <h5>Innovation</h5>
                         <!--
                         <p>Design Thinking allows students to think beyond the constraints of established processes and known solutions for everyday problems.  Students are encouraged to work on solutions to questions that haven’t been asked and problems that haven’t been identified yet.</p>
                         -->
                     </div>
                     <div class="col-sm-2 mb-45">
-                        <div class="page-icon-top"><i class="ion ion-ios-gear-outline"></i></div>
+                        <div class="page-icon-top"><i class="ion ion-ios-color-filter-outline"></i></div>
                         <h5>Networking</h5>
                         <!--
                         <p>Technology and innovation are the driving forces in solving complex problems around the world. Creative problem solving and the entrepreneurial mindset are important to developing a successful venture, whether as a start-up or working on a project within a company.</p>
                         -->
                     </div>
                     <div class="col-sm-2 mb-45">
-                        <div class="page-icon-top"><i class="ion ion-ios-lightbulb-outline"></i></div>
+                        <div class="page-icon-top"><i class="ion ion-ios-gear-outline"></i></div>
                         <h5>Tech Skills</h5>
                         <!--
                         <p>Digital tools, software programs, and new methodologies in engineering and business are essential to professional development. Graduate engineering students are able to enhance their technical skills through various workshops and seminars.</p>
@@ -292,12 +292,8 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- End Service Section -->
-
-        
-
-        <!-- Work Section -->
+        <br/>
+        <br/>
         <section id="work" class="wow fadeInUp pt pt-sm-80 text-center">
             <div class="container">
                 <h3>Upcoming Events</h3>
@@ -316,19 +312,19 @@
                 </div>
                 <!-- End work Filter -->
             </div>
-            <!-- Work Gallary -->
+            <!-- Upcoming Events-->
             <div class="container-fluid ">
                 <div class="row">
                     <div class="container-grid nf-col-4">
 
-                        <div class="nf-item communicate">
+                        <div class="nf-item communicate all">
                             <div class="item-box">
                                 <a class="" href="https://www.eventbrite.com/e/resume-reviews-making-the-most-of-graduate-career-fairs-tickets-28194686065" title="Consequat massa quis">
                                     <img class="item-container" src="img/portfolio/writing.jpg" alt="1" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Communication | Writing</h5>
-                                            <p class="white">Improve your writing skills whether it's for an academic assignment, business proposal, resume, cover letter, or a project.</p>
+                                            <h5 class="lightblue">Resume Review: Making the Most of Graduate Career Fairs</h5>
+                                            <p class="white">Attending a Career Fair can be rewarding, but overwhelming. However, with guidance from CCE, you can attend with complete confidence! Get tips on preparing for the event, making the most of meeting recruiters on the day of the fair, and following up after the event to maintain the connections.</p>
                                             <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
@@ -336,7 +332,7 @@
                             </div>
                         </div>
 
-                        <div class="nf-item network">
+                        <div class="nf-item connect all">
                             <div class="item-box">
                                 <a class="" href="events.html#events-network" title="Vivamus elementum semper">
                                     <img class="item-container" src="img/portfolio/industry.png" alt="2" />
@@ -351,7 +347,7 @@
                             </div>
                         </div>
 
-                        <div class="nf-item build">
+                        <div class="nf-item communicate all">
                             <div class="item-box">
                                 <a class="" href="events.html#events-build" title="Quisque rutrum">
                                     <img class="item-container" src="img/portfolio/present.jpg" alt="4" />
@@ -366,7 +362,7 @@
                             </div>
                         </div>
 
-                        <div class="nf-item build">
+                        <div class="nf-item communicate all">
                             <div class="item-box">
                                 <a class="" href="events.html#events-build" title="Tellus eget condimentum">
                                     <img class="item-container" src="img/portfolio/collaboration.jpg" alt="4" />
@@ -381,7 +377,7 @@
                             </div>
                         </div>
 
-                        <div class="nf-item build">
+                        <div class="nf-item communicate all">
                             <div class="item-box">
                               <a class="" href="events.html#events-build" title="Nullam quis ant">
                                     <img class="item-container" src="img/portfolio/crosscultural.png" alt="5" />
@@ -396,7 +392,7 @@
                             </div>
                         </div>
 
-                        <div class="nf-item network">
+                        <div class="nf-item connect all">
                             <div class="item-box">
                                 <a class="" href="events.html#events-network" title="Sed fringilla mauris">
                                     <img class="item-container" src="img/portfolio/Alumni_RoundTableF12.jpg" alt="6" />
@@ -404,14 +400,14 @@
                                         <div class="item-caption">
                                             <h5 class="lightblue">Networking | Alumni</h5>
                                             <p class="white">Connect and expand your network with alumni in various engineering and business industries.</p>
-                                            <p class="salmon"> Click here to register</p>
+                                            <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
                                 </a>
                             </div>
                         </div>
 
-                        <div class="nf-item design">
+                        <div class="nf-item innovate all">
                             <div class="item-box">
                                 <a class="" href="events.html#events-design" title="Augue velit cursus">
                                     <img class="item-container" src="img/portfolio/design.png" alt="7" />
@@ -419,14 +415,14 @@
                                         <div class="item-caption">
                                             <h5 class="lightblue">Design Thinking</h5>
                                             <p class="white">Apply the design process to your engineering skills.</p>
-                                            <p class="salmon"> Click here for workshops and events.</p>
+                                            <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
                                 </a>
                             </div>
                         </div>
 
-                        <div class="nf-item sync">
+                        <div class="nf-item communicate all">
                             <div class="item-box">
                                 <a class="" href="events.html#events-sync" title="Donec sodales sagittis">
                                     <img class="item-container" src="img/portfolio/sync.jpg" alt="8" />
@@ -434,7 +430,7 @@
                                         <div class="item-caption">
                                             <h5 class="lightblue">SYNC | Your Online Profile</h5>
                                             <p class="white">Your digital legacy follows you wherever you go. You ARE "googlable!" Learn how to sync your professional self "in real life (IRL)" with your online profile.</p>
-                                            <p class="salmon"> Click here for workshops and events.</p>
+                                            <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
                                 </a>
