--- a/events.html
+++ b/events.html
@@ -64,7 +64,7 @@
                 </div>
                 <!-- End Mobile Navbar Icon -->
 <nav id="navMenu"></nav>
-<script src="menu_header.js"></script>
+<script src= "events_menu_header.js"></script>
                 <!-- Navbar Navigation -->
                <!--
                 <div class="nav-menu">
