--- a/events.html
+++ b/events.html
@@ -566,7 +566,7 @@
             <div id="cal" class="responsiveCal" >
             <h1 align="center"> Calendar </h1>
             <p>
-                <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=seascapengineering%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FNew_York" style="border-width:0;padding-top: 25px" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=seascapengineering%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
             </p>
         </div>
         </section>
