--- a/events.html
+++ b/events.html
@@ -211,12 +211,12 @@
                 <!<div class="row">
                     <ul class="container-filter categories-filter">
                         <li><a class="categories active" data-filter=".all">All</a></li>
-                        <li><a class="categories" data-filter=".communicate">Communicate</a></li>
-                        <li><a class="categories" data-filter=".lead">Lead</a></li>
-                        <li><a class="categories" data-filter=".collaborate">Collaborate</a></li>
-                        <li><a class="categories" data-filter=".innovate">Innovate</a></li>
-                        <li><a class="categories" data-filter=".connect">Connect</a></li>
-                        <li><a class="categories" data-filter=".tech">Tech</a></li>
+                        <li><a class="categories" data-filter=".communicate"><img alt="1" src="img/portfolio/ios7-compose.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".lead"><img alt="1" src="img/portfolio/ios7-person.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".collaborate"><img alt="1" src="img/portfolio/ios7-people.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".innovate"><img alt="1" src="img/portfolio/ios7-lightbulb.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".connect"><img alt="1" src="img/portfolio/ios-color-filter.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".tech"><img alt="1" src="img/portfolio/ios7-gear.png" class="item-container"></a></li>
                     </ul>
                 </div>
                 <!-- End work Filter -->
@@ -252,6 +252,33 @@
                     
                     <div class="nf-item connect communicate spacing all">
                         <div class="item-box">
+                            <a href="http://specialevents.cce.columbia.edu/graduate-student-career-fair-2016">
+                                <img alt="1" src="img/portfolio/gradcareerfair.png" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Graduate Student Career Fair 2016</h5>
+                                        <p class="salmon">Networking, Communication, Career</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="nf-item tech spacing all">
+                        <div class="item-box">
+                            <a href="http://bit.ly/2dPbSFz">
+                                <img alt="1" src="img/portfolio/pythonopenlab.png" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Python Open Labs: Programming Made Easy</h5>
+                                        <p class="salmon">Tech Skills, Computer Science</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="nf-item connect communicate spacing all">
+                        <div class="item-box">
                             <a href="https://www.eventbrite.com/e/tech-talk-goldman-sachs-tickets-28193440339">
                                 <img alt="1" src="img/portfolio/Goldman.jpg" class="item-container">
                                 <div class="item-mask">
@@ -264,14 +291,14 @@
                         </div>
                     </div>
 
-                    <div class="nf-item connect collaborate spacing all">
+                    <div class="nf-item tech innovate collaborate spacing all">
                         <div class="item-box">
-                            <a href="diverse.html">
-                                <img alt="1" src="img/portfolio/diversity.jpg" class="item-container">
+                            <a href="https://docs.google.com/a/tc.columbia.edu/forms/d/e/1FAIpQLSeSqEE0vobYIiPiRktB0ZL_eh5Xt1EUiZjrJK7Oj702qlMS7w/viewform">
+                                <img alt="1" src="img/portfolio/makerseries.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
-                                        <h5 class="white">Engineers in a Diverse Society</h5>
-                                        <p class="salmon">Diversity, Networking, Teamwork</p>
+                                        <h5 class="white">Maker Series: 3D Printing for Everyday Solutions</h5>
+                                        <p class="salmon">Tech Skills, Innovation, Teamwork</p>
                                     </div>
                                 </div>
                             </a>
@@ -280,14 +307,14 @@
 
 
 
-                    <div class="nf-item innovate tech spacing all">
+                    <div class="nf-item tech spacing all">
                         <div class="item-box">
-                            <a href="portfolio-single4.html">
-                                <img alt="1" src="img/portfolio/Ux.png" class="item-container">
+                            <a href="http://bit.ly/2dHWkC2">
+                                <img alt="1" src="img/portfolio/ropenlab.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
-                                        <h5 class="white">Introduction to UX Design Thinking</h5>
-                                        <p class="salmon">Innovation, Tech Skills</p>
+                                        <h5 class="white">R Open Lab: Formatting Data in R</h5>
+                                        <p class="salmon">Tech Skills, Computer Science</p>
                                     </div>
                                 </div>
                             </a>
@@ -308,14 +335,14 @@
                         </div>
                     </div>
 
-                    <div class="nf-item connect collaborate communicate spacing all">
+                    <div class="nf-item innovate tech spacing all">
                         <div class="item-box">
-                            <a href="portfolio-single1.html">
-                                <img alt="1" src="img/portfolio/bootcamp.jpg" class="item-container">
+                            <a href="http://bit.ly/2dBwHAI">
+                                <img alt="1" src="img/portfolio/oculus.png" class="item-container">
                                 <div class="item-mask">
                                     <div class="item-caption">
-                                        <h5 class="white">MGMT Consulting Bootcamp Networking & Case Interviews</h5>
-                                        <p class="salmon">Networking, Teamwork, Communication</p>
+                                        <h5 class="white">Oculus Rift Open Lab </h5>
+                                        <p class="salmon">Tech Skills, Innovation</p>
                                     </div>
                                 </div>
                             </a>
@@ -392,6 +419,33 @@
                         </div>
                     </div>
 
+                    <div class="nf-item innovate tech spacing all">
+                        <div class="item-box">
+                            <a href="portfolio-single8-vimeo.html">
+                                <img alt="1" src="img/portfolio/userstories.jpg" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Understanding User Stories</h5>
+                                        <p class="salmon">Innovation, Tech Skills</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="nf-item innovate tech spacing all">
+                        <div class="item-box">
+                            <a href="portfolio-single1.html">
+                                <img alt="1" src="img/portfolio/ideation.jpg" class="item-container">
+                                <div class="item-mask">
+                                    <div class="item-caption">
+                                        <h5 class="white">Ideation & Prototyping</h5>
+                                        <p class="salmon">Innovation, Tech Skills</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                     <div class="nf-item communicate spacing all">
                         <div class="item-box">
                             <a href="https://www.eventbrite.com/e/resume-reviews-making-the-most-of-graduate-career-fairs-tickets-28194686065">
@@ -566,7 +620,7 @@
             <div id="cal" class="responsiveCal" >
             <h1 align="center"> Calendar </h1>
             <p>
-                <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=seascapengineering%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=seascapengineering%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FNew_York" style="font-family: garamond"; "border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>  
             </p>
         </div>
         </section>
