--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <nav id="navMenu"></nav>
 <script src="menu_header.js"></script>
 <!-- Navbar Navigation -->
-               <!--                <div class="nav-menu">
+               <!--<div class="nav-menu">
                     
                     <ul class="nav-menu-inner">
                         <li>
@@ -323,7 +323,7 @@
 
                         <div class="nf-item communicate all">
                             <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/resume-reviews-making-the-most-of-graduate-career-fairs-tickets-28194686065" title="Consequat massa quis">
+                                <a class="" href="https://www.eventbrite.com/e/resume-reviews-making-the-most-of-graduate-career-fairs-tickets-28194686065" title="Resume Review: Making the Most of Graduate Career Fairs">
                                     <img class="item-container" src="img/portfolio/writing.jpg" alt="1" />
                                     <div class="item-mask">
                                         <div class="item-caption">
@@ -338,7 +338,7 @@
 
                         <div class="nf-item tech connect all">
                             <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/career-talk-data-science-in-finance-tickets-28262811831">
+                                <a class="" href="https://www.eventbrite.com/e/career-talk-data-science-in-finance-tickets-28262811831" title="Career Talk: Data Science in Finance">
                                     <img class="item-container" src="img/portfolio/careertalkone.jpg" alt="2" />
                                     <div class="item-mask">
                                         <div class="item-caption">
@@ -351,14 +351,14 @@
                             </div>
                         </div>
 
-                        <div class="nf-item communicate all">
+                        <div class="nf-item tech innovate all">
                             <div class="item-box">
-                                <a class="" href="events.html#events-build" title="Quisque rutrum">
-                                    <img class="item-container" src="img/portfolio/present.jpg" alt="4" />
+                                <a class="" href="http://library.columbia.edu/news/events/event.html?guid=CAL-00bbdc41-57605f7f-0157-6c2193a2-00004d9bevents%40columbia.edu&returnlinkurl=/content/libraryweb/locations/dssc/workshops&returnlinktext=Workshops%20%26%20Training" title="Oculus Rift Open Lab">
+                                    <img class="item-container" src="img/portfolio/oculus.png" alt="4" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Communication | Storytelling</h5>
-                                            <p class="white">Elevator pitches, research talks, presentations, start-up pitches - learn how to engage your audience.</p>
+                                            <h5 class="lightblue">Oculus Rift Open Lab</h5>
+                                            <p class="white">Come test out our Oculus Rift and experience virtual reality! Since its release last year, this exciting new technology has generated all kinds of ideas, debates, and experiments for future applicability and innovations. Find out what all the buzz is about and start dreaming big.</p>
                                             <p class="salmon"> Click here to register</p>
                                         </div>
                                     </div>
@@ -366,14 +366,14 @@
                             </div>
                         </div>
 
-                        <div class="nf-item communicate all">
+                        <div class="nf-item tech all">
                             <div class="item-box">
-                                <a class="" href="events.html#events-build" title="Tellus eget condimentum">
-                                    <img class="item-container" src="img/portfolio/collaboration.jpg" alt="4" />
+                                <a class="" href="http://library.columbia.edu/news/events/event.html?guid=CAL-00bbdc41-5780487e-0157-8c4935fd-000051a7events%40columbia.edu&returnlinkurl=/content/libraryweb/locations/dssc/workshops&returnlinktext=Workshops%20%26%20Training" title="R Open Lab">
+                                    <img class="item-container" src="img/portfolio/ropenlab.png" alt="4" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Communication | Collaboration</h5>
-                                            <p class="white">Build your communication skills for collaborative projects, employment or your start-up. Learn how to approach difficult conversations and gain conflict resolution skills.</p>
+                                            <h5 class="lightblue">R Open Lab</h5>
+                                            <p class="white">Interested in exploring real-world data using R techniques? Join us in learning the capabilities of R, an open-source statistical programming language. We'll use data analytics in a process to understand the world better by using real world data.</p>
                                             <p class="salmon"> Click here to register</p>
                                         </div>
                                     </div>
@@ -381,15 +381,30 @@
                             </div>
                         </div>
 
-                        <div class="nf-item communicate all">
+                        <div class="nf-item tech collaborate innovate all">
                             <div class="item-box">
-                              <a class="" href="events.html#events-build" title="Nullam quis ant">
-                                    <img class="item-container" src="img/portfolio/crosscultural.png" alt="5" />
+                              <a class="" href="https://docs.google.com/a/tc.columbia.edu/forms/d/e/1FAIpQLSeSqEE0vobYIiPiRktB0ZL_eh5Xt1EUiZjrJK7Oj702qlMS7w/viewform" title="Maker Series: 3D Printing">
+                                    <img class="item-container" src="img/portfolio/makerseries.png" alt="5" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Communication | Cross-Cultural </h5>
-                                            <p class="white">As global citizens cultural awareness and inclusion is critical to personal and professional development and community building. Learn essential skills in cross-cultural dialogue, active listening, inclusion, and awareness.</p>
+                                            <h5 class="lightblue">Maker Series: 3D Printing for Everyday Solutions </h5>
+                                            <p class="white">3D modeling for 3D printing might seem daunting at first, but it doesn't have to be! This workshop will introduce you to simple but useful 3D printing projects that provide easy fixes in your life; from creating a stand for your phone to replacing broken parts on your keyboard, our 3D printing expert will walk you through how to create simple 3D models as an entry point to modeling more advanced objects. Note: please bring your laptop for this session.</p>
                                             <p class="salmon"> Click here to register</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="nf-item tech all">
+                            <div class="item-box">
+                                <a class="" href="http://library.columbia.edu/news/events/event.html?guid=CAL-00bbdcc7-57455e21-0157-67eb95b4-0000449eevents%40columbia.edu&returnlinkurl=/content/libraryweb/locations/dssc/workshops&returnlinktext=Workshops%20%26%20Training" title="Python Open Labs">
+                                    <img class="item-container" src="img/portfolio/pythonopenlab.png" alt="6" />
+                                    <div class="item-mask">
+                                        <div class="item-caption">
+                                            <h5 class="lightblue">Python Open Labs: Programming Made Easy</h5>
+                                            <p class="white">Join us in exploring the basics of programming via Python, one of the most widely used programming languages and indispensable tool in almost every field. A continuation from the the first session covering the Python basics right from the beginning, setting the groundwork for a range of possibilities including text processing, using databases and interacting with web pages and APIs.</p>
+                                            <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
                                 </a>
@@ -398,27 +413,12 @@
 
                         <div class="nf-item connect all">
                             <div class="item-box">
-                                <a class="" href="events.html#events-network" title="Sed fringilla mauris">
-                                    <img class="item-container" src="img/portfolio/Alumni_RoundTableF12.jpg" alt="6" />
+                                <a class="" href="http://specialevents.cce.columbia.edu/graduate-student-career-fair-2016" title="Graduate Student Career Fair 2016">
+                                    <img class="item-container" src="img/portfolio/gradcareerfair.png" alt="7" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Networking | Alumni</h5>
-                                            <p class="white">Connect and expand your network with alumni in various engineering and business industries.</p>
-                                            <p class="salmon">Click here to register</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="nf-item innovate all">
-                            <div class="item-box">
-                                <a class="" href="events.html#events-design" title="Augue velit cursus">
-                                    <img class="item-container" src="img/portfolio/design.png" alt="7" />
-                                    <div class="item-mask">
-                                        <div class="item-caption">
-                                            <h5 class="lightblue">Design Thinking</h5>
-                                            <p class="white">Apply the design process to your engineering skills.</p>
+                                            <h5 class="lightblue">Graduate Student Career Fair 2016</h5>
+                                            <p class="white">This fair will feature organizations from industries including media, finance, consulting, technology and more! This event offers employers a unique opportunity to promote internships and full time positions exclusively to Columbia graduate students (Masters, PhD) and PostDocs.</p>
                                             <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
